Time: 1 ms (99.97%), Space: 39.5 MB (55.26%) - LeetHub