@@ -14,31 +14,20 @@
  * }
  */
 class Solution {
+    List<List<Integer>> res = new ArrayList<>();
     public List<List<Integer>> pathSum(TreeNode root, int targetSum) {
-      if (root == null) return new ArrayList<>();
-        List<List<Integer>> res = new ArrayList<>();
-        List<Integer> temp = new ArrayList<>();
-        dfs(root ,targetSum , res , temp);
+        if(root == null ) return res;
+        pathSumHelper(root , targetSum , new LinkedList<Integer>());
         return res;
     }
-    
-    private void dfs(TreeNode r , int s , List<List<Integer>> res ,List<Integer> temp ){
-        if(r == null) return;
-        temp.add(r.val);
-        if(r.left == null && r.right ==null ){
-            if(s == r.val){
-                res.add(new ArrayList<Integer>(temp));
-            }
-            return;
-        }
-        
-        if(r.left!= null){
-            dfs(r.left , s-r.val , res,temp);
-            temp.remove(temp.size()-1);
-        }
-        if(r.right!= null){
-            dfs(r.right , s-r.val , res,temp);
-            temp.remove(temp.size()-1);
-        }
+    private void pathSumHelper(TreeNode root, int targetSum , LinkedList<Integer> temp){
+        if(root == null) return;
+                temp.add(root.val);
+
+        if(root.left == null && root.right == null && root.val == targetSum) res.add(new ArrayList<>(temp));
+        pathSumHelper(root.left , targetSum-root.val , temp);
+        pathSumHelper(root.right , targetSum-root.val , temp);
+        temp.removeLast();
+
     }
 }
